--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,11 +6,6 @@ server {
   access_log /var/log/nginx/access.log;
   root /var/www/html/public;
 
-  location / {
-    try_files $uri $uri/ /index.php?$query_string;
-    gzip_static on;
-  }
-
   location ~ \.php$ {
     try_files $uri =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -20,4 +15,10 @@ server {
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param PATH_INFO $fastcgi_path_info;
   }
+  
+  location / {
+    try_files $uri/ $uri /index.php?$query_string;
+    gzip_static on;
+  }
+
 }
